# quantum-sensing

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateTinyDataSet.m  README.md  build.sh  demodulate.m  goertzel.py  hello_world.c  intepattempt.m  log.txt  main.c  nntiny.ipynb  out.txt  parsecsv.py  pico_sdk_import.cmake  quantalph.m  snipoutdefect.m  test.sh  upload.sh  vis.py
RF modules testing/src/: main.cpp
magvis 2/: CMakeLists.txt  README.md
magvis 2/python sims/biote-savart/: main.py
magvis 2/python sims/putter/: equations.py  testing_ursina.py  unittests.py
magvis 2/src/: Biot-Savart.cpp  Biot-Savart.hpp  CMakeLists.txt  Vec3.cpp  Vec3.hpp  Wire.cpp  Wire.hpp
magvis 2/tests/: Biot-Savart_test.cpp  CMakeLists.txt  Vec3_test.cpp  Wire_test.cpp
moe/: GenerateTinyDataSet.m  SNREstimate2.m  demodulate.m  intepattempt.m  mscoherence.m  nntiny.ipynb  parsecsv.py  quantalph.m
pillow_code/: log.csv  log1.txt  log_HI.txt  log_secret.txt  platformio.ini  qunatum-sensing.code-workspace
pillow_code/src/: main.cpp
scripts/: adc1-2.py  goertzel.py  inspector.py  mag.py  pillow_synth.ipynb  sym_num_fix.py  synth_data_gen.csv  vis.py
src/: 2D_antenna.c  main.c  spool_antenna.c  tx-rx-fusion.c
src/lib/: CMakeLists.txt  dbh-12.c  dbh-12.h  manchester_encoding.h  signal_generator.c  signal_generator.h  transmitter.c  transmitter.h
transmitter/: CMakelists.txt  dbh-12.c  main.c  manchester_encoding.c  signal_generator.h  transmitter.c  transmitter.h
